--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>My Queen’s Student Page</title>
+    <title>Q: What's red and bad for your teeth?</title>
     <link rel="stylesheet" href="style.css"/> <!-- do not change this line -->
   </head>
   <body>
@@ -20,19 +20,21 @@
       <img src="me.jpg" alt="Your Name portrait" width="240" height="240" />
 
       <!-- ====== PROJECTS/COURSES (add or rename items to courses instead of projects) ====== -->
-      <h2>Courses</h2>
+      <h2>Courses:</h2>
       <ul>
-        <li>CISC121</li>
-        <li>CISC102</li>
-        <li>MATH121</li>
-        <li>MATH112</li>
-        <li>ARIN100</li>
+        <li>CISC121 (Intro to CS)</li>
+        <li>CISC102 (Discrete Structures)</li>
+        <li>MATH121 (Calculus)</li>
+        <li>MATH112 (Linear Algebra)</li>
+        <li>ARIN100 (Fundamentals of AI)</li>
       </ul>
 
       <!-- ====== CONTACT (update your links) ====== -->
       <h2>Contact</h2>
       <p>Email: <a href="mailto:24gfx5@queensu.ca">24gfx5@queensu.ca</a></p>
       <p>LinkedIn: <a href="#">https://www.linkedin.com/in/joshua-puusaari-5891ba2a2/</a></p>
+
+      <h3>A: A brick!</h3>
     </main>
   </body>
 </html>
