--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <main>
       <!-- ====== ABOUT SECTION (edit the text) ====== -->
-      <h2>About Me</h2>
+      <h2>About Me:</h2>
       <p>I am a student at Queen’s School of Computing. I’m interested in programming, especially game dev, and art (I mainly do pixel art)!! :)</p>
 
       <!-- ====== PHOTO (upload me.jpg to repo root, then update the src below) ====== -->
@@ -30,7 +30,7 @@
       </ul>
 
       <!-- ====== CONTACT (update your links) ====== -->
-      <h2>Contact</h2>
+      <h2>Contact:</h2>
       <p>Email: <a href="mailto:24gfx5@queensu.ca">24gfx5@queensu.ca</a></p>
       <p>LinkedIn: <a href="#">https://www.linkedin.com/in/joshua-puusaari-5891ba2a2/</a></p>
 
