--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
   </head>
   <body>
     <header>
-      <h1>Joshua Puusaari</h1> <!-- change this heading to your name -->
+      <h1>Joshua Puusaari</h1>
     </header>
 
     <main>
-      <!-- ====== ABOUT SECTION (edit the text) ====== -->
+      <!-- ====== ABOUT SECTION ====== -->
+      <!-- TODO: improve About text -->
       <h2>About Me:</h2>
       <p>I am a student at Queen’s School of Computing. I’m interested in programming, especially game dev, and art (I mainly do pixel art)!! :)</p>
 
-      <!-- ====== PHOTO (upload me.jpg to repo root, then update the src below) ====== -->
-<!--       <img src="me.jpg" alt="Your Name portrait" width="240" height="240" /> -->
-
-      <!-- ====== PROJECTS/COURSES (add or rename items to courses instead of projects) ====== -->
+      <!-- ====== PROJECTS/COURSES ====== -->
       <h2>Courses:</h2>
       <ul>
         <li>CISC121 (Intro to CS)</li>
@@ -29,7 +27,7 @@
         <li>ARIN100 (Fundamentals of AI)</li>
       </ul>
 
-      <!-- ====== CONTACT (update your links) ====== -->
+      <!-- ====== CONTACT ====== -->
       <h2>Contact:</h2>
       <p>Email: <a href="mailto:24gfx5@queensu.ca">24gfx5@queensu.ca</a></p>
       <p>LinkedIn: <a href="#">https://www.linkedin.com/in/joshua-puusaari-5891ba2a2/</a></p>
