--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Q: Joshua Puusaari's Queen's Student Page</title>
+    <title>Joshua Puusaari's Queen's Student Page</title>
     <link rel="stylesheet" href="style.css"/> <!-- do not change this line -->
   </head>
   <body>
     <header>
       <h1>
-        Joshua Puusaari
-        Q: What's red and bad for your teeth?
+        Joshua Puusaari | Q: What's red and bad for your teeth?
       </h1> <!-- change this heading to your name -->
     </header>
 
